# winrt-install-package-example

./: .gitignore  CMakeLists.txt  build-windows-x64.bat
src/: main.cpp
